src/components/UpcomingBirthdays/UpcomingBirthdays.css
.birthdayArea {
  /* padding: 5%; */
  width: 25%;
  margin-left: 3%;
  background-color: cadetblue;
  border: solid black 3px;
  border-radius: 10px;
  font-family: 'Shadows Into Light', cursive;
}

.name-area {
  list-style-type: none;
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;

}

.check-area {
  display: flex
}

.check {
  font-size: 30px
}

